<resources>
    <string name="app_name">UberSat</string>
    <string name="plan_type_description">Ícone que representa o tipo do plano</string>
    <string name="fail_get_plans">Não foi possível obter os planos</string>
    <string name="fail_get_installers">Não foi possível obter os instaladores pra esse plano</string>
    <string name="see_installers">Instaladores disponíveis</string>
    <string name="request_quote">Solicitar um orçamento</string>
    <string name="download_speed_label">"Velocidade de download: %.2fMbps"</string>
    <string name="download_speed_value">"%.2fMbps"</string>
    <string name="upload_speed_label">"Velocidade de upload: %.2fMbps"</string>
    <string name="upload_speed_value">"%.2fMbps"</string>
    <string name="data_capacity_label">"Franquia de dados: %.2fGB"</string>
    <string name="data_capacity_value">"%.2fGB"</string>
    <string name="data_capacity_label_unlimited">Franquia de dados: ilimitada</string>
    <string name="unlimited">Ilimitada</string>
    <string name="price_per_month_label">"Preço por mês: R$%.2f"</string>
    <string name="price_value">"R$%.2f"</string>
    <string name="type_of_internet_label">"Tipo de conexão: %s"</string>
    <string name="satellite">Satélite</string>
    <string name="cable">Cabo</string>
    <string name="wire">Fibra</string>
    <string name="radio">Rádio</string>
    <string name="price_per_km_label">"Preço por Km: R$%.2f"</string>
    <string name="distance_km_label">"Distância: %.2fKm"</string>
    <string name="no_installers">Não há instaladores disponíveis para esse plano.</string>
    <string name="admin_area_location_info">Planos para %s</string>
    <string name="change_state">Alterar estado</string>
    <string name="search">Pesquisar</string>
    <string name="cancel">Cancelar</string>
    <string name="no_plans">Nenhum plano disponível</string>
    <string name="sort_by_distance">Ordenar por distância</string>
    <string name="sort_by_price">Ordenar por preço</string>
    <string name="sort_by_rating">Ordenar por classificação</string>
    <string name="send">Enviar</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="city">Cidade</string>
    <string name="phone">Telefone</string>
    <string name="email">Email</string>
    <string name="quote_sent">Solicitação enviada.</string>
    <string name="am_installer">Sou instalador</string>
    <string name="close_quote">Concluir solicitação</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
</resources>