<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    tools:context=".activity.QuoteActivity">

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_internal"
        android:autofillHints="postalAddress"
        android:hint="@string/address"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_internal"
        android:autofillHints="postalCode"
        android:hint="@string/city"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/etAddress" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_internal"
        android:autofillHints="phone"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/etCity" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_internal"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/etPhone" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="@dimen/margin_internal"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>